objects/APXTConga4__Document_History__c.object
<CustomObject>
    <fields>
        <fullName>APXTConga4__Conga_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conga Solution</label>
        <referenceTo>APXTConga4__Conga_Solution__c</referenceTo>
        <relationshipLabel>Document Histories</relationshipLabel>
        <relationshipName>Document_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Last_Viewed__c</fullName>
        <label>Last Viewed</label>
        <summarizedField>APXTConga4__Document_History_Detail__c.APXTConga4__Last_Viewed__c</summarizedField>
        <summaryForeignKey>APXTConga4__Document_History_Detail__c.APXTConga4__Document_History__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Link_Text__c</fullName>
        <label>Link Text</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Master_Object_ID__c</fullName>
        <label>Master Object ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Number_of_Views__c</fullName>
        <label>Number of Views</label>
        <summarizedField>APXTConga4__Document_History_Detail__c.APXTConga4__Number_of_Views__c</summarizedField>
        <summaryForeignKey>APXTConga4__Document_History_Detail__c.APXTConga4__Document_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APXTConga4__URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Document History</label>
    <nameField>
        <displayFormat>DH-{0000}</displayFormat>
        <label>Document History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>